Fixed page overflow

--- a/src/app/components/how-to-play/how-to-play.component.scss
+++ b/src/app/components/how-to-play/how-to-play.component.scss
@@ -3,7 +3,7 @@
 
 .container {
     max-width: 86%;
-    height: 80vh;
+    height: 80%;
     margin: auto;
     font-family: "Mouse Memoirs", sans-serif;
 }
@@ -20,14 +20,14 @@
     background-image: linear-gradient(#67B6FF, #FFFFFF);
     color: transparent;
     background-clip: text;
-    -webkit-text-stroke: 3px #243041;
+    -webkit-text-stroke: 1.5px #243041;
     font-weight: 700;
 
 }
 
 main {
-    max-height: 324px;
-    margin-top: 80px;
+    margin-top: 65px;
+    margin-bottom: 20px;
     display: grid;
     gap: 24px;
    
