--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100vh;
+  height: 100%;
   color: var(--white);
 }
 
